* FIX: configuration files  * ADDED: new stages collecting keys  * ADDED: total order validator stats  * ADDED: multiple options in environment.sh (memory and garbage collector)