@@ -5,7 +5,16 @@
 ### Set your bind address for the tests to use. Could be an IP, host name or a reference to an environment variable.
 BIND_ADDRESS=${MYTESTIP_2}
 JG_FLAGS="-Dresolve.dns=false -Djgroups.timer.num_threads=4"
-JVM_OPTS="-server -Xmx1024M -Xms1024M"
+JVM_OPTS="-server"
+JVM_OPTS="$JVM_OPTS -Xmx1024M -Xms1024M"
+#allocate more memory if needed
+#JVM_OPTS="$JVM_OPTS -Xmx8G -Xms8G"
+#JVM_OPTS="$JVM_OPTS -Xmx16G -Xms16G"
+#choose on of the GC types (or none if you want to use the default)
+#JVM_OPTS="$JVM_OPTS -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode"
+#JVM_OPTS="$JVM_OPTS -XX:+UseParallelGC"
+#enble remote JMX connection
+JVM_OPTS="-Dcom.sun.management.jmxremote.port=8081 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false"
 JVM_OPTS="$JVM_OPTS $JG_FLAGS"
 JPROFILER_HOME=${HOME}/jprofiler6
 JPROFILER_CFG_ID=103
